# dataproduct-apps

./: Dockerfile  Earthfile  README.md  docker-compose.yml  mise.toml  nais.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: deploy.yaml  main.yaml
.nais/: naisjob-collect-gcp.yaml  naisjob-collect-onprem.yaml  naisjob-persist.yaml  prometheusrule-collect.yaml  prometheusrule-persist.yaml  topics.yaml
dataproduct_apps/: collect.py  config.py  crd.py  endpoints.py  k8s.py  kafka.py  main.py  model.py  persist.py  topics.py
nais/: alert-collect.yaml  alert-persist.yaml  application.yaml  dataproduct-apps-collect-gcp.yaml  dataproduct-apps-collect-onprem.yaml  dataproduct-apps-collect.yaml  dataproduct-apps-persist.yaml  dataproduct-apps-topics.yaml  nais.yaml  naisjob-topics.yaml  naisjob.yaml  network-policy-apiserver-collect.yaml  network-policy-apiserver-topics.yaml  network-policy-apiserver.yaml  prometheusrule-collect.yaml  prometheusrule-persist.yaml  topic-nais.yaml  topic.yaml
tests/: conftest.py  test_collect.py  test_config.py  test_integration.py  test_kafka.py  test_model.py  test_persist.py
tests/integration_test_data/: app_topic.yaml  k8s_cluster.yaml  topic_topic.yaml
