[tool.poetry]
name = "dataproduct-apps"
version = "0.1.0"
description = "Dataproduct listing apps in clusters"
authors = ["NAIS <nais@nav.no>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.9"
google-cloud-bigquery = "3.31.0"
google-cloud-storage = "2.19.0"
Flask = "^3.1.0"
fiaas-logging = "^0.1"
kafka-python = "^2.1.4"
k8s = "^0.28"
pydantic-settings = "^2.8.1"
deepdiff = "^8.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8"
prospector = "^1"
pytest-cov = "^6"
pytest-sugar = "^1.0"
requests = "^2.32.3"
requests-toolbelt = "^1.0.0"
setuptools = "^75.8.2"
pyyaml = "^6.0.2"

[tool.poetry.scripts]
dataproduct-apps-topics = "dataproduct_apps.main:topics"
dataproduct-apps-collect = "dataproduct_apps.main:collect"
dataproduct-apps-persist = "dataproduct_apps.main:persist"

[tool.poetry.group.sbom-tools.dependencies]
cyclonedx-bom = "^4.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
