[tool.poetry]
name = "dataproduct-apps"
version = "0.1.0"
description = "Dataproduct listing apps in clusters"
authors = ["NAIS <nais@nav.no>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.9"
google-cloud-bigquery = "3.41.0"
google-cloud-storage = "3.9.0"
Flask = "^3.1.3"
fiaas-logging = "^0.1"
kafka-python = "^2.3.1"
k8s = "^0.28"
pydantic-settings = "^2.11.0"
deepdiff = "^8.6.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8"
prospector = "^1"
pytest-cov = "^7"
pytest-sugar = "^1.1"
requests = "^2.32.3"
requests-toolbelt = "^1.0.0"
setuptools = "^82.0.1"
pyyaml = "^6.0.3"
ruff = "^0.15.10"

[tool.poetry.scripts]
dataproduct-apps-topics = "dataproduct_apps.main:topics"
dataproduct-apps-collect = "dataproduct_apps.main:collect"
dataproduct-apps-persist = "dataproduct_apps.main:persist"

[tool.poetry.group.sbom-tools.dependencies]
cyclonedx-bom = "^7.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
